se crean los compoentes y servicios de Reserva

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,12 @@
 <footer class="p-5 container-fluid bg-dark text-white fw-bold">
     <div class="row">
         <div class="col-12 col-md-6 text-end">
-            <h1>HOTELES PATAGONICOS</h1>
-            <h3>Argentina</h3>
-            <h3>lorem | lorem | lorem</h3>
+            <h3>Atlantis Paradise Hotel</h3>
+            <h5>Atlantis</h5>
+            <h5>Oceano Atlantico | Estrecho de Gilbraltar | + 972 123 45 67</h5>
         </div>
         <div class="col-12 col-md-3 border-start align-self-center">
-            <h5>Visitanos y danos el placer de atenderte</h5>
+            
             <a href="">
                 <i class="bi bi-instagram fs-2 text-white me-2"></i>
             </a>
@@ -16,6 +16,9 @@
             <a href="">
                 <i class="bi bi-whatsapp fs-2 text-white me-2"></i>
             </a>
+            <h6>2023 © Francia Pareja Vallejo.</h6>
+            <h6>Todos los derechos reservados.</h6>
+            
         </div>
     </div>
 </footer>
