--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <app-menu></app-menu>
 <div class="banner text-white">
     <div class="p-5 text-white fw-bold text-center">
-        <h1>Hoteles Patagonicos</h1>
-        <h3>Patagonia | Argentina</h3>
+        <h1>Atlantis Paradise Hotel</h1>
+        <h3>Oceano Atlantico | Atlantis</h3>
     </div>
 </div>
 <app-descripcion></app-descripcion>
@@ -10,5 +10,7 @@
 </section>
 
 <app-habitaciones></app-habitaciones>
+
+<app-reservas></app-reservas>
 
 <app-footer></app-footer>
