--- a/src/app/descripcion/descripcion.component.html
+++ b/src/app/descripcion/descripcion.component.html
@@ -1,51 +1,53 @@
 <section class="container-fluid my-5">
     <div class="row">
-
         <div class="col-12 col-md-4 p-5 text-center">
             <h2>CALIFICACIONES</h2>
-            <p class="text-start mt-4">Instalaciones y servicios</p>
+            <p class="text-start mt-4">Instalaciones</p>
             <div class="progress" role="progressbar">
-                <div class="progress-bar" style="width: 85%">85%</div>
+                <div class="progress-bar" style="width: 95%">95%</div>
             </div>
-            <p class="text-start mt-4">Instalaciones y servicios</p>
+            <p class="text-start mt-4">Precios</p>
             <div class="progress" role="progressbar">
-                <div class="progress-bar" style="width: 75%">85%</div>
+                <div class="progress-bar" style="width: 82%">82%</div>
             </div>
-            <p class="text-start mt-4">Instalaciones y servicios</p>
+            <p class="text-start mt-4">Privacidad</p>
             <div class="progress" role="progressbar">
-                <div class="progress-bar" style="width: 60%">85%</div>
+                <div class="progress-bar" style="width: 88%">88%</div>
             </div>
-            <p class="text-start mt-4">Instalaciones y servicios</p>
+            <p class="text-start mt-4">Exclusividad</p>
             <div class="progress" role="progressbar">
-                <div class="progress-bar" style="width: 95%">85%</div>
+                <div class="progress-bar" style="width: 99%">99%</div>
             </div>
-            <p class="text-start mt-4">Instalaciones y servicios</p>
+            <p class="text-start mt-4">Servicio de Alimentacion</p>
             <div class="progress" role="progressbar">
-                <div class="progress-bar" style="width: 65%">85%</div>
+                <div class="progress-bar" style="width: 90%">90%</div>
             </div>
-            <img src="../../assets/img/promo.webp" alt="" class="img-fluid w-100 mt-3">
+            <br>
+            <img src="../../assets/img/relax6.jpg" alt="" class="img-fluid w-100 mt-3">
         </div>
         <div class="col-12 col-md-8">
             <div class="row">
-                <h2>Hoteles PATAGONICOS</h2>
+                <h2>Atlantis Paradise Hotel</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. A voluptatum illum quod rerum nesciunt dignissimos neque possimus, magni dolor iure amet repellat est aperiam recusandae, ipsa consequatur illo iste minus doloremque ullam eligendi iusto veniam dolorem nisi. Ex sint est voluptates impedit corporis quas cumque, adipisci quos laboriosam odit recusandae possimus, itaque deleniti, dolorem ea non qui iusto esse autem deserunt corrupti harum maxime! Saepe ipsa inventore veritatis provident debitis eligendi nihil exercitationem! Nisi recusandae, id incidunt sit natus ducimus esse delectus sint adipisci? Modi illo commodi esse quos magnam aspernatur ipsa illum placeat eveniet quas voluptate nulla vitae labore corrupti sequi optio ab natus fuga accusantium exercitationem quibusdam, necessitatibus sed. Porro error, est illum id sint iusto amet veniam aspernatur, voluptates, ipsum eaque. Quibusdam reiciendis voluptatum voluptatibus asperiores aspernatur itaque dolore cum, doloremque minima libero. Incidunt beatae consequuntur vitae labore totam tempora ipsa porro nostrum, ipsam iusto laboriosam modi provident quibusdam dolorum iure fuga, ullam exercitationem quos nulla dolorem voluptatibus illum? Magni sint dolorem, ipsam, cumque dolore alias obcaecati earum in harum possimus tenetur nostrum voluptatem quibusdam iure dolores quia porro eum voluptatum molestiae nobis! Corporis optio, maiores, harum iure, perferendis est blanditiis similique amet corrupti illo veritatis voluptatem?
+                    Situado en el Océano Atlántico, en algún lugar hacia el exterior del Estrecho de Gibraltar. Es una isla lo suficientemente grande que entre sus instalaciones tiene la infraestructura de un hotel convencional con habitaciones con vista al mar, tanto desde la tierra como dentro del oceano; cuenta ademas con terrazas, restaurantes, discotecas, salas de cine, centro de convenciones, guarderias y el parque acuatico mas grande del mundo. 
+                <br>
+                    En algún lugar bajo el agua en el Atlántico, su ubicacion aparece tanto en los mapas de google maps como en los de sonar del fondo del océano.
                 </p>
             </div>
             <div class="row">
                 <div class="col-12 col-md-6">
-                    <img src="../../assets/img/comodidad1.jpg" alt=""  class="img-fluid w-100 h-100 shadow zoom">
+                    <img src="../../assets/img/relax1.jpg" alt=""  class="img-fluid w-100 h-100 shadow zoom">
                 </div>
                 <div class="col-12 col-md-6">
-                    <img src="../../assets/img/comodidad2.jpg" alt="" class="img-fluid w-100 h-100 shadow zoom">
+                    <img src="../../assets/img/relax2.jpg" alt="" class="img-fluid w-100 h-100 shadow zoom">
                 </div>
             </div>
             <div class="row mt-3">
                 <div class="col-12 col-md-6">
-                    <img src="../../assets/img/comodidad3.jpg" alt=""  class="img-fluid w-100 h-100 shadow zoom">
+                    <img src="../../assets/img/relax4.jpg" alt=""  class="img-fluid w-100 h-100 shadow zoom">
                 </div>
                 <div class="col-12 col-md-6">
-                    <img src="../../assets/img/comodidad4.jpg" alt="" class="img-fluid w-100 h-100 shadow zoom">
+                    <img src="../../assets/img/relax5.jpg" alt="" class="img-fluid w-100 h-100 shadow zoom">
                 </div>
             </div>
         </div>
