--- a/src/app/habitaciones/habitaciones.component.html
+++ b/src/app/habitaciones/habitaciones.component.html
@@ -1,12 +1,10 @@
 <div class="container my-5">
     <div class="row">
         <div class="col-12">
-            <h2>CONOCE NUESTRAS OPCIONES DE ALOJAMIENTO: </h2>
+            <h2>CONOCE NUESTRAS OPCIONES DE ALOJAMIENTO <br> Y ESPACIOS PARA EVENTOS: </h2>
             <hr>
         </div>
     </div>
-
-    
 
     <div class="row row-cols-1 row-cols-md-4 mt-5 g-2">
         <div class="col" *ngFor="let habitacion of habitaciones">
@@ -16,7 +14,7 @@
                 <h6>{{habitacion.descripcion}}</h6>
                 <h6>
                     <i class="bi bi-person-fill"></i>
-                    x{{habitacion.cantidadMaxima}}
+                    x{{habitacion.cantidadmaxima}}
                 </h6>
                 <h5 class="fw-bold">Desde: {{habitacion.precioNoche}} USD</h5>
             </div>
