--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 .banner{
-    background-image: url("../../assets/img/banner.jpg");
+    background-image: url("../../assets/img/imperio1.jpg");
     background-position: top center;
     background-size: cover;
     background-attachment: fixed;
@@ -9,7 +9,7 @@
 }
 
 .banner2{
-    background-image: url("../../assets/img/banner2.jpg");
+    background-image: url("../../assets/img/imperio3.jpg");
     background-position: top center;
     background-size: cover;
     background-attachment: fixed;
