se crean las consultas de reservas y la tabla que muestra las reservas ingresadas, se ajusta codigo con el diseño del sitio

--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -1,23 +1,1 @@
-<div class="container my-5">
-    <div class="row">
-        <div class="col-12">
-            <h2>RESERVAS</h2>
-            <hr>
-        </div>
-    </div>
-
-    <div class="row row-cols-1 row-cols-md-4 mt-5 g-2">
-        <div class="col" *ngFor= "let reserva of bookings">
-            <div class="card h-100 shadow text-center p-3">
-                <h4>{{reserva.nombreCliente}}</h4>
-                <h6>{{reserva.idHabitacion}}</h6>
-                <h4>{{reserva.apellidoCliente}}</h4>
-                <h4>{{reserva.telefono}}</h4>
-                <h6>{{reserva.fechaInicio}}</h6>
-                <h6>{{reserva.fechaFinal}}</h6>
-                <h6>{{reserva.cantidadPersonas}}</h6>
-                <h6>{{reserva.costoReserva}}</h6>
-            </div>
-        </div>
-    </div>
-</div>
+<p>bookings works!</p>
