--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,18 +1,22 @@
 <header>
     <nav class="navbar navbar-expand-lg menu navbar-dark fixed-top" id="menu">
         <div class="container-fluid">
-          <a class="navbar-brand" routerLink="#">Atlantis Paradise Hotel</a>
+          <a class="navbar-brand" routerLink="/">Atlantis Paradise Hotel</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" routerLink="/registroReserva">Administrar Reservas</a>
+                <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" routerLink="/registrohabitacion">Administrar Habitaciones</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/registroreservas">Administrar Reservas</a>
+              </li>
+              
             </ul>
           </div>
         </div>
